# Flask-WebSub

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  client_example.py  server_example.py  setup.cfg  setup.py
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst
flask_websub/: __init__.py  errors.py  publisher.py  utils.py
flask_websub/hub/: __init__.py  blueprint.py  storage.py  tasks.py
flask_websub/subscriber/: __init__.py  blueprint.py  discovery.py  events.py  storage.py
templates/: server_example.html
tests/: test_integration.py  test_publisher.py  test_subscriber_discovery.py  utils.py
