[metadata]
description_file = README.md

[build_sphinx]
source_dir = docs
build_dir  = docs/_build
all_files  = 1

[tool:pytest]
addopts = --junitxml=junit/test-results.xml --cov flask_websub --cov tests --cov-report html --cov-report=xml

[coverage:run]
branch = True

[aliases]
test = pytest
lint = flake8
